# qwcsp

./: .gitignore  CMakeLists.txt  README  format.txt  instance13.txt  instance14.txt  instance15.txt  instance16.txt  instance17.txt  instance18.txt  instance19.txt  instance20.txt  instance21.txt  run.sh  toyWCSP.txt
data/: gen-random-wcsp.py  instance0.txt  instance1.txt  instance10.txt  instance2.txt  instance3.txt  instance4.txt  instance5.txt  instance6.txt  instance7.txt  instance8.txt  instance9.txt
data/new/: instance11.txt  instance12.txt
gecode-release-6.2.0/contribs/qecode/: AbstractWorker.h  CMakeLists.txt  MatrixGame  NetworkPricing1  NetworkPricing2  NimFibo  OldUnitTests  OptVar.cpp  OptVar.h  QCSPPlusUnblockable.cpp  QCSPPlusUnblockable.h  QCSPSolver.cpp  QCSPSolver.h  QProblem.cpp  QProblem.h  QSpace.cpp  QSpace.h  Strategy.cpp  Strategy.h  StrategyNode.cpp  StrategyNode.h  TestQCOP  UnblockableBranching.h  UnblockableViewValBranching.cpp  UnblockableViewValBranching.h  Work.cpp  Work.h  WorkComparators.cpp  WorkComparators.h  WorkManager.cpp  WorkManager.h  Worker.cpp  Worker.h  myDom.cpp  qecode.h  qsolver_parallel.cpp  qsolver_parallel.h  qsolver_qcop.cpp  qsolver_qcop.h  qsolver_unblockable.cpp  (+2 more)
gecode-release-6.2.0/contribs/qecode/examples/: MatrixGame.cpp  NetworkPricing1.cpp  NetworkPricing2.cpp  NimFibo.cpp  OldUnitTests.cpp  TestQCOP.cpp
gecode-release-6.2.0/contribs/qecode/manual/src/: bibtex.bib  qecode-introduction.tex
gecode-release-6.2.0/examples/: job-shop
scripts/: convert-uai-to-wcsp-dir.sh  convert-uai-to-wcsp.py
src/: CMakeLists.txt  ConstraintCompositeGraph.h  FastWVCSolver.h  GurobiCustomCallback.h  LinearProgramSolver.h  LinearProgramSolverGurobi.cpp  LinearProgramSolverGurobi.h  MWVCSolver.h  MWVCSolverFastWVC.h  MWVCSolverLinearProgramming.h  MWVCSolverMessagePassing.h  Recorder.h  UpdateHistory.h  WCSPInstance.h  main.cpp
src/old/: MWVCSolverFastWVC_old.h  fastWVC_old.h
